# sega-mega-drive-demo

./: .gitignore  CMakeLists.txt  README.md  build.sh
res/: gfx.res
src/: main.c  main.h
